Enable subpixel positioning for chrome os for fractional dsf

This patch enables the font subpixel positioning for the browser ui
and blink for fractional device scale factors.

It also adds a switch to force disable subpixel positioning for
easier debugging and testing on devices.

Bug: 839214
Change-Id: If8fd7dbc39ac3950bc27b5b7435b482fb4931065
Component: Font, subpixel positioning, kerning
Reviewed-on: https://chromium-review.googlesource.com/1053289
Reviewed-by: Nico Weber <thakis@chromium.org>
Reviewed-by: Dan Erat <derat@chromium.org>
Commit-Queue: Malay Keshav <malaykeshav@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558764}
Former-commit-id: f00044b1973636900b1e65818e162dbb93efdeb9